--- a/css/app.css
+++ b/css/app.css
@@ -107,3 +107,135 @@ h1 {
     float: right;
     cursor: pointer;
 }
+@keyframes flipY {
+    from {
+        transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+        animation-timing-function: ease-in;
+        opacity: 0;
+      }
+
+      40% {
+        transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+        animation-timing-function: ease-in;
+      }
+
+      60% {
+        transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+        opacity: 1;
+      }
+
+      80% {
+        transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+      }
+
+      to {
+        transform: perspective(400px);
+      }
+}
+
+@keyframes tada {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+
+  10%, 20% {
+    transform: scale3d(.9, .9, .9) rotate3d(0, 0, 1, -3deg);
+  }
+
+  30%, 50%, 70%, 90% {
+    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, 3deg);
+  }
+
+  40%, 60%, 80% {
+    transform: scale3d(1.1, 1.1, 1.1) rotate3d(0, 0, 1, -3deg);
+  }
+
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes bounceIn {
+  from, 20%, 40%, 60%, 80%, to {
+    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
+  }
+
+  0% {
+    opacity: 0;
+    transform: scale3d(.3, .3, .3);
+  }
+
+  20% {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  40% {
+    transform: scale3d(.9, .9, .9);
+  }
+
+  60% {
+    opacity: 1;
+    transform: scale3d(1.03, 1.03, 1.03);
+  }
+
+  80% {
+    transform: scale3d(.97, .97, .97);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.deck .card.open {
+    animation-duration: .6s;
+    backface-visibility: visible !important;
+    animation-name: flipY;
+    background: #ffc40a;
+    cursor: default;
+}
+
+.deck .card.show {
+    font-size: 150%;
+}
+
+.deck .fa {
+    font-size: 150%;
+}
+
+.deck .card.match  {
+    cursor: default;
+    background: #27f198;
+    font-size: 150%;
+    animation-name: tada;
+    animation-duration: .6s;
+}
+
+/*
+ * Styles for the Congrats Panel
+ */
+
+.congratsPopup {
+    width: 360px;
+    min-height: 380px;
+    background: #fcf9ed;
+    padding: 32px;
+    border-radius: 10px;
+    text-align: center;
+    position: absolute;
+    margin: auto auto;
+    animation-name: bounceIn;
+    animation-duration: .7s;
+}
+
+.congratsPlay {
+    cursor: pointer;
+    background: #2ecc71;
+    height: 4rem;
+    width: 10rem;
+    margin: auto;
+    padding: 1.2em;
+    color: white;
+    border-radius: 8px;
+}
